2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Add Visual Studio project and solution.
	* msvc/roboptim-core-plugin-cfsqp/config.h: New.
	* msvc/roboptim-core-plugin-cfsqp/roboptim-core-cfsqp-plugin.sln: New.
	* msvc/roboptim-core-plugin-cfsqp/roboptim-core-plugin-cfsqp.vcproj: New.
	* msvc/simple/simple.vcproj: New.

2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Tag plug-in hooks functions as exportable for Windows compatbility.
	* src/roboptim-core-cfsqp-plugin.cc: Here.

2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Change default iteration number.
	* src/roboptim-core-cfsqp-plugin.cc: Here.
	* tests/optimization-problem-1.stdout,
	* tests/plugin.stdout,
	* tests/simple-1.stdout,
	* tests/simple-2.stdout,
	* tests/simple.stdout: Regenerate.

2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix Windows compatbility problems.
	* src/roboptim-core-cfsqp-plugin.cc:
	Allocate dynamically the arrays CFSQP has to use as
	Visual Studio fail to compile if their size is not
	known at compile-time, add desallocation code and
	replace bzero usage by memset which is more portable.

2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Mark class as exportable for Windows compatibility.
	* include/roboptim/core/plugin/cfsqp.hh: Here.

2009-07-31  Thomas Moulard  <thomas.moulard@gmail.com>

	Avoid creating superfluous constraints.
	* src/roboptim-core-cfsqp-plugin.cc: Fix CFSQP constraint
	array building algorithm.
	* tests/simple-1.stdout,
	* tests/simple-2.stdout: Regenerate.

2009-07-30  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix documentation.
	* include/roboptim/core/plugin/cfsqp.hh: Here.

2009-07-30  Thomas Moulard  <thomas.moulard@gmail.com>

	Add new test.
	* tests/Makefile.am: Compile new test.
	* tests/simple-2.cc: New.
	* tests/simple-2.stdout: New.
	* tests/testsuite.at: Run new test.

2009-07-30  Thomas Moulard  <thomas.moulard@gmail.com>

	Re-enable gcov support in plug-in.
	* src/Makefile.am: Here.
